--- a/roles/user/tasks/main.yaml
+++ b/roles/user/tasks/main.yaml
@@ -13,7 +13,7 @@
     name: common
     tasks_from: mongodb-setup
 
-- name: systemd service 
+- name: systemctl service 
   ansible.builtin.role-setup:
     name: common
     tasks_from: systemd
