--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -1,20 +1,20 @@
 - name: app-setup
-  ansible.builtin.role-setup:
+  ansible.builtin.import_role:
     name: common
     tasks_from: app-setup
 
 - name: nodejs server setup
-  ansible.builtin.role-setup:
+  ansible.builtin.import_role:
     name: common
     tasks_from: nodejs-server
 
 - name: mongodb setup
-  ansible.builtin.role-setup:
+  ansible.builtin.import_role:
     name: common
     tasks_from: mongodb-setup
 
 - name: systemctl service 
-  ansible.builtin.role-setup:
+  ansible.builtin.import_role:
     name: common
     tasks_from: systemd
 
