--- a/roles/common/tasks/systemd.yaml
+++ b/roles/common/tasks/systemd.yaml
@@ -7,8 +7,8 @@
   ansible.builtin.systemd_service:
     daemon_reload: true
 
-  - name: start and enable {{component}}
+  - name: "start and enable {{component}}"
   ansible.builtin.service:
-    name: {{component}}
+    name: "{{component}}"
     state: restarted
     enabled: yes
