--- a/roles/cart/tasks/main.yaml
+++ b/roles/cart/tasks/main.yaml
@@ -1,10 +1,10 @@
 - name: app-setup
-  ansible.builtin.role-setup:
+  ansible.builtin.import_role:
     name: common
     tasks_from: app-setup
 
 - name: nodejs server setup
-  ansible.builtin.role-setup:
+  ansible.builtin.import_role:
     name: common
     tasks_from: nodejs-server
 
@@ -14,6 +14,6 @@
 #     tasks_from: mongodb-setup
 
 - name: systemd service 
-  ansible.builtin.role-setup:
+  ansible.builtin.import_role:
     name: common
     tasks_from: systemd
